--- a/Project_02/Project_02/Project_02.vcxproj.filters
+++ b/Project_02/Project_02/Project_02.vcxproj.filters
@@ -15,7 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp">
+    <ClCompile Include="Version_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Version_1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Version_1도서검색up.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
